--- a/Furnishing.html
+++ b/Furnishing.html
@@ -271,7 +271,7 @@ this Furnishing?</p>
                             <a class="aprt-form-cencel" href="#" type="button"
               data-mdb-ripple-init
               data-mdb-dismiss="modal">Cancel</a>
-                            <button onclick="showAlert()" class="af-save"   type="button" class="btn btn-primary" data-mdb-ripple-init>Save</button>
+                            <button onclick="showAlert()" class="af-save custom-btn dark"   type="button"  data-mdb-ripple-init>Save</button>
                           </div>
                           
                          
