--- a/asset/pages/addAprtFurn.html
+++ b/asset/pages/addAprtFurn.html
@@ -43,7 +43,7 @@
               <div class="menu-icon">
                 <img src="../images/deve-icon.svg" alt="" />
               </div>
-              <a class="menu-link" href="addApartment.html">Apartments</a>
+              <a class="menu-link" href="../../appartment.html">Apartments</a>
             </li>
             <li
               class="menu-item active d-flex justify-content-start align-items-center"
