--- a/main-aprt-furnishing.html
+++ b/main-aprt-furnishing.html
@@ -23,64 +23,52 @@
   </head>
   <body>
     <aside>
-      <div class="container p-0">
-        <div class="site-logo">
-          <img src="../images/logo.png" alt="" />
-        </div>
-        <div class="aside-menu">
-          <ul class="menu-ul">
-            <li
-              class="menu-item d-flex justify-content-start align-items-center"
-            >
-              <div class="menu-icon">
-                <img src="../images/deve-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="../../index.html">Developments</a>
-            </li>
-            <li
-              class="menu-item d-flex justify-content-start align-items-center"
-            >
-              <div class="menu-icon">
-                <img src="../images/deve-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="../../appartment.html">Apartments</a>
-            </li>
-            <li
-              class="menu-item active d-flex justify-content-start align-items-center"
-            >
-              <div class="menu-icon">
-                <img src="../images/furn-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="../../Furnishing.html">Furnishings</a>
-            </li>
-            <li
-              class="menu-item d-flex justify-content-start align-items-center"
-            >
-              <div class="menu-icon">
-                <img src="../images/fbr-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="../../fabric.html">Fabrics</a>
-            </li>
-            <li
-              class="menu-item d-flex justify-content-start align-items-center"
-            >
-              <div class="menu-icon">
-                <img src="../images/client-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="../../clients.html">Clients</a>
-            </li>
-            <li
-              class="menu-item d-flex justify-content-start align-items-center"
-            >
-              <div class="menu-icon">
-                <img src="../images/client-icon.svg" alt="" />
-              </div>
-              <a class="menu-link" href="../../demoUser.html">Demo Users</a>
-            </li>
-          </ul>
-        </div>
+    <div class="container p-0">
+      <div class="site-logo">
+        <img src="asset/images/logo.png" alt="" />
       </div>
-    </aside>
+      <div class="aside-menu">
+        <ul class="menu-ul">
+          <li class="menu-item d-flex justify-content-start align-items-center">
+            <div class="menu-icon">
+              <img src="asset/images/deve-icon.svg" alt="" />
+            </div>
+            <a class="menu-link" href="index.html">Developments</a>
+          </li>
+          <li class="menu-item active d-flex justify-content-start align-items-center">
+            <div class="menu-icon">
+              <img src="asset/images/deve-icon.svg" alt="" />
+            </div>
+            <a class="menu-link" href="appartment.html">Apartments</a>
+          </li>
+          <li class="menu-item d-flex justify-content-start align-items-center">
+            <div class="menu-icon">
+              <img src="asset/images/furn-icon.svg" alt="" />
+            </div>
+            <a class="menu-link" href="Furnishing.html">Furnishings</a>
+          </li>
+          <li class="menu-item d-flex justify-content-start align-items-center">
+            <div class="menu-icon">
+              <img src="asset/images/fbr-icon.svg" alt="" />
+            </div>
+            <a class="menu-link" href="fabric.html">Fabrics</a>
+          </li>
+          <li class="menu-item d-flex justify-content-start align-items-center">
+            <div class="menu-icon">
+              <img src="asset/images/client-icon.svg" alt="" />
+            </div>
+            <a class="menu-link" href="clients.html">Clients</a>
+          </li>
+          <li class="menu-item d-flex justify-content-start align-items-center">
+            <div class="menu-icon">
+              <img src="asset/images/client-icon.svg" alt="" />
+            </div>
+            <a class="menu-link" href="demoUser.html">Demo Users</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </aside>
 
     <!-- ================================================== -->
     <!-- =================    MAIN CONTAINER   ============ -->
@@ -191,7 +179,7 @@
                             <input
                               class="inputs"
                               type="number"
-                              value="9600.00"
+                              placeholder="9600.00"
                             />
                           </div>
                         </div>
@@ -205,78 +193,10 @@
                         <p class="ps-3">Add Fabric Deals to this furnishing</p>
                       </div>
                       <div class="apf-space-total">
-                        <p>Total Spaces Added: 5</p>
+                        <p>Total Spaces Added: 0</p>
                       </div>
                     </div>
-                    <div class="fdeals-inp">
-                      <div class="row">
-                        <div class="col-8">
-                          <div class="choose-fp-inp d-flex flex-column">
-                            <label for="">Deal Name</label>
-                            <select
-                              class="form-select selects inputs"
-                              name=""
-                              id=""
-                            >
-                              <option selected value="Designer Pack">
-                                Premium Fabric
-                              </option>
-                              <option value="">Premium Fabric</option>
-                              <option value="">Premium Fabric</option>
-                            </select>
-                          </div>
-                        </div>
-                        <div class="col-4">
-                          <div class="choose-fp-inp d-flex flex-column">
-                            <label for="">Price in AUD</label>
-                            <input
-                              class="inputs"
-                              type="number"
-                              value="3200.00"
-                            />
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row fdeal-curtains">
-                        <div class="col-5">
-                          <div class="choose-fp-inp d-flex flex-column">
-                            <label for="">Curtains or Roller Blind?</label>
-                            <select
-                              class="form-select selects inputs"
-                              name=""
-                              id=""
-                            >
-                              <option selected value="Designer Pack">
-                                Curtains
-                              </option>
-                              <option value="">Curtains</option>
-                              <option value="">Curtains</option>
-                            </select>
-                          </div>
-                        </div>
-                        <div class="col-7">
-                          <div class="choose-fp-inp d-flex flex-column">
-                            <label for="">Price in AUD</label>
-                            <div
-                              class="fdeals-colors d-flex align-items-center"
-                            >
-                              <div class="fd-color color-active">
-                                <p>White</p>
-                              </div>
-                              <div class="fd-color">
-                                <p>Snow</p>
-                              </div>
-                              <div class="fd-color color-active">
-                                <p>Purple</p>
-                              </div>
-                              <div class="fd-color">
-                                <p>Black</p>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+
                     <div class="fdeals-inp deal-clone">
                       <div class="row">
                         <div class="col-8">
@@ -360,7 +280,7 @@
                 Add Another Furnishing
               </button>
               <a
-                href="addMotarization.html"
+                href="main-aprt-moto.html"
                 type="submit"
                 class="custom-btn continue"
                 >Continue to Motorisation</a
