--- a/demoUser.html
+++ b/demoUser.html
@@ -45,7 +45,7 @@
               <div class="menu-icon">
                 <img src="asset/images/deve-icon.svg" alt="" />
               </div>
-              <a class="menu-link" href="asset/pages/addApartment.html"
+              <a class="menu-link" href="appartment.html"
                 >Apartments</a
               >
             </li>
