--- a/Furnishing.html
+++ b/Furnishing.html
@@ -20,9 +20,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="phone.css" />
   </head>
   <body>
-    <aside>
+    <aside id="sidebar">
+         <div class="cross-btn" onclick="crossBtn()">
+        <i class="fas fa-xmark"></i>
+      </div>
       <div class="container p-0">
         <div class="site-logo">
           <img src="asset/images/logo.png" alt="" />
@@ -87,6 +91,11 @@
     <div class="main-container container-fluid">
       <div class="contianer-fluid">
         <div class="header d-flex justify-content-between align-items-center">
+           <div class="toggle-btn" onclick="toggleSideNav()">
+            <div class="toggle-bar"></div>
+            <div class="toggle-bar"></div>
+            <div class="toggle-bar"></div>
+          </div>
           <div class="site-name">
             <h3>Admin Panel</h3>
           </div>
@@ -119,8 +128,8 @@
       </div>
       <!-- =============================== -->
       <div class="dev-cards">
-        <div class="row">
-          <div class="col-lg-3">
+        <div class="row d-flex furn-row">
+          <div class="col-xl-3 col-lg-4 furn-col">
             <div class="dev-card">
               <div class="dev-card-img">
                 <img class="w-100" src="asset/images/furn-card1.png" alt="" />
@@ -137,7 +146,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-xl-3 col-lg-4 furn-col">
             <div class="dev-card">
               <div class="dev-card-img">
                 <img class="w-100" src="asset/images/furn-card2.png" alt="" />
@@ -158,7 +167,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-xl-3 col-lg-4 furn-col">
             <div class="dev-card">
               <div class="dev-card-img">
                 <img class="w-100" src="asset/images/furn-card3.png" alt="" />
@@ -226,11 +235,7 @@ this Furnishing?</p>
 
     <!-- Modal -->
     <!-- Button trigger modal -->
-    <button>Launch demo modal</button>
-
-    <!-- Modal -->
-    <!-- Button trigger modal -->
-    <button>Launch demo modal</button>
+    
 
     <!-- Modal -->
     <div
