--- a/asset/pages/addAprtFurn.html
+++ b/asset/pages/addAprtFurn.html
@@ -20,9 +20,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../../index.css" />
+    <link rel="stylesheet" href="../../phone.css" />
   </head>
   <body>
-    <aside>
+    <aside id="sidebar">
+      <div class="cross-btn" onclick="crossBtn()">
+        <i class="fas fa-xmark"></i>
+      </div>
       <div class="container p-0">
         <div class="site-logo">
           <img src="../images/logo.png" alt="" />
@@ -88,6 +92,11 @@
       <!-- ======================= HEADER ====================== -->
       <div class="contianer-fluid">
         <div class="header d-flex justify-content-between align-items-center">
+          <div class="toggle-btn" onclick="toggleSideNav()">
+            <div class="toggle-bar"></div>
+            <div class="toggle-bar"></div>
+            <div class="toggle-bar"></div>
+          </div>
           <div class="site-name">
             <h3>Admin Panel</h3>
           </div>
@@ -108,7 +117,7 @@
       <div class="apf-container">
         <div class="apf-info">
           <div class="row">
-            <div class="col-6">
+            <div class="col-md-6 col-sm-12">
               <div
                 class="apf-info-div d-flex justify-content-start align-items-start flex-column"
               >
@@ -124,7 +133,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-6 ps-3">
+            <div class="col-md-6 col-sm-12 ps-3">
               <div
                 class="apf-info-div d-flex justify-content-start align-items-start flex-column"
               >
@@ -142,7 +151,7 @@
             </div>
           </div>
         </div>
-        <div class="apf-add-spaces d-flex flex-column">
+        <div class="apf-add-spaces d-flex flex-column table-responsive">
           <h4 class="text-center">Add Apartment Spaces</h4>
           <div
             class="apf-space-head d-flex justify-content-between align-items-center"
@@ -156,7 +165,7 @@
             </div>
           </div>
           <div class="apf-main-head d-flex align-items-center">
-            <div class="row w-100">
+            <div class="row apf-row">
               <div class="col-6">
                 <p class="align-self-start">Space Name</p>
               </div>
@@ -165,7 +174,7 @@
           </div>
           <div class="apf-main-content">
             <div class="apf-bed-sec">
-              <div class="row">
+              <div class="row apf-row">
                 <div class="col-6 apf-bed">
                   <input
                     type="text"
@@ -194,7 +203,7 @@
           </div>
           <div class="apf-main-content">
             <div class="apf-bed-sec">
-              <div class="row">
+              <div class="row apf-row">
                 <div class="col-6 apf-bed">
                   <input
                     type="text"
@@ -223,7 +232,7 @@
           </div>
           <div class="apf-main-content">
             <div class="apf-bed-sec">
-              <div class="row">
+              <div class="row row apf-row">
                 <div class="col-6 apf-bed">
                   <input
                     type="text"
@@ -252,7 +261,7 @@
           </div>
           <div class="apf-main-content">
             <div class="apf-bed-sec">
-              <div class="row">
+              <div class="row apf-row">
                 <div class="col-6 apf-bed">
                   <input
                     type="text"
@@ -281,7 +290,7 @@
           </div>
           <div class="apf-main-content apf-clone">
             <div class="apf-bed-sec">
-              <div class="row">
+              <div class="row apf-row">
                 <div class="col-6 apf-bed">
                   <input type="text" placeholder="Space Name" name="" id="" />
                 </div>
