--- a/asset/pages/addMotarization.html
+++ b/asset/pages/addMotarization.html
@@ -20,9 +20,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../../index.css" />
+    <link rel="stylesheet" href="../../phone.css" />
   </head>
   <body>
-    <aside>
+    <aside id="sidebar">
+         <div class="cross-btn" onclick="crossBtn()">
+        <i class="fas fa-xmark"></i>
+      </div>
       <div class="container p-0">
         <div class="site-logo">
           <img src="../images/logo.png" alt="" />
@@ -88,6 +92,11 @@
       <!-- ======================= HEADER ====================== -->
       <div class="contianer-fluid">
         <div class="header d-flex justify-content-between align-items-center">
+           <div class="toggle-btn" onclick="toggleSideNav()">
+            <div class="toggle-bar"></div>
+            <div class="toggle-bar"></div>
+            <div class="toggle-bar"></div>
+          </div>
           <div class="site-name">
             <h3>Admin Panel</h3>
           </div>
