--- a/index.html
+++ b/index.html
@@ -20,9 +20,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="phone.css" />
   </head>
   <body>
-    <aside>
+    <aside id="sidebar">
+      <div class="cross-btn" onclick="crossBtn()">
+        <i class="fas fa-xmark"></i>
+      </div>
+
       <div class="container p-0">
         <div class="site-logo">
           <img src="asset/images/logo.png" alt="" />
@@ -43,9 +48,7 @@
               <div class="menu-icon">
                 <img src="asset/images/deve-icon.svg" alt="" />
               </div>
-              <a class="menu-link" href="appartment.html"
-                >Apartments</a
-              >
+              <a class="menu-link" href="appartment.html">Apartments</a>
             </li>
             <li
               class="menu-item d-flex justify-content-start align-items-center"
@@ -89,6 +92,11 @@
     <div class="main-container container-fluid">
       <div class="contianer-fluid">
         <div class="header d-flex justify-content-between align-items-center">
+          <div class="toggle-btn" onclick="toggleSideNav()">
+            <div class="toggle-bar"></div>
+            <div class="toggle-bar"></div>
+            <div class="toggle-bar"></div>
+          </div>
           <div class="site-name">
             <h3>Admin Panel</h3>
           </div>
@@ -122,7 +130,7 @@
       <!-- =============================== -->
       <div class="dev-cards">
         <div class="row">
-          <div class="col-lg-3">
+          <div class="col-xl-3 col-lg-4 develop-col col-md-2 col-12">
             <div class="dev-card">
               <div class="dev-card-img">
                 <img class="w-100" src="asset/images/dev-card.png" alt="" />
