--- a/main-aprt-furnishing.html
+++ b/main-aprt-furnishing.html
@@ -19,56 +19,72 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../../index.css" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="phone.css" />
   </head>
   <body>
-    <aside>
-    <div class="container p-0">
-      <div class="site-logo">
-        <img src="asset/images/logo.png" alt="" />
+    <aside id="sidebar">
+      <div class="cross-btn" onclick="crossBtn()">
+        <i class="fas fa-xmark"></i>
       </div>
-      <div class="aside-menu">
-        <ul class="menu-ul">
-          <li class="menu-item d-flex justify-content-start align-items-center">
-            <div class="menu-icon">
-              <img src="asset/images/deve-icon.svg" alt="" />
-            </div>
-            <a class="menu-link" href="index.html">Developments</a>
-          </li>
-          <li class="menu-item active d-flex justify-content-start align-items-center">
-            <div class="menu-icon">
-              <img src="asset/images/deve-icon.svg" alt="" />
-            </div>
-            <a class="menu-link" href="appartment.html">Apartments</a>
-          </li>
-          <li class="menu-item d-flex justify-content-start align-items-center">
-            <div class="menu-icon">
-              <img src="asset/images/furn-icon.svg" alt="" />
-            </div>
-            <a class="menu-link" href="Furnishing.html">Furnishings</a>
-          </li>
-          <li class="menu-item d-flex justify-content-start align-items-center">
-            <div class="menu-icon">
-              <img src="asset/images/fbr-icon.svg" alt="" />
-            </div>
-            <a class="menu-link" href="fabric.html">Fabrics</a>
-          </li>
-          <li class="menu-item d-flex justify-content-start align-items-center">
-            <div class="menu-icon">
-              <img src="asset/images/client-icon.svg" alt="" />
-            </div>
-            <a class="menu-link" href="clients.html">Clients</a>
-          </li>
-          <li class="menu-item d-flex justify-content-start align-items-center">
-            <div class="menu-icon">
-              <img src="asset/images/client-icon.svg" alt="" />
-            </div>
-            <a class="menu-link" href="demoUser.html">Demo Users</a>
-          </li>
-        </ul>
+      <div class="container p-0">
+        <div class="site-logo">
+          <img src="asset/images/logo.png" alt="" />
+        </div>
+        <div class="aside-menu">
+          <ul class="menu-ul">
+            <li
+              class="menu-item d-flex justify-content-start align-items-center"
+            >
+              <div class="menu-icon">
+                <img src="asset/images/deve-icon.svg" alt="" />
+              </div>
+              <a class="menu-link" href="index.html">Developments</a>
+            </li>
+            <li
+              class="menu-item active d-flex justify-content-start align-items-center"
+            >
+              <div class="menu-icon">
+                <img src="asset/images/deve-icon.svg" alt="" />
+              </div>
+              <a class="menu-link" href="appartment.html">Apartments</a>
+            </li>
+            <li
+              class="menu-item d-flex justify-content-start align-items-center"
+            >
+              <div class="menu-icon">
+                <img src="asset/images/furn-icon.svg" alt="" />
+              </div>
+              <a class="menu-link" href="Furnishing.html">Furnishings</a>
+            </li>
+            <li
+              class="menu-item d-flex justify-content-start align-items-center"
+            >
+              <div class="menu-icon">
+                <img src="asset/images/fbr-icon.svg" alt="" />
+              </div>
+              <a class="menu-link" href="fabric.html">Fabrics</a>
+            </li>
+            <li
+              class="menu-item d-flex justify-content-start align-items-center"
+            >
+              <div class="menu-icon">
+                <img src="asset/images/client-icon.svg" alt="" />
+              </div>
+              <a class="menu-link" href="clients.html">Clients</a>
+            </li>
+            <li
+              class="menu-item d-flex justify-content-start align-items-center"
+            >
+              <div class="menu-icon">
+                <img src="asset/images/client-icon.svg" alt="" />
+              </div>
+              <a class="menu-link" href="demoUser.html">Demo Users</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </div>
-  </aside>
+    </aside>
 
     <!-- ================================================== -->
     <!-- =================    MAIN CONTAINER   ============ -->
@@ -76,6 +92,11 @@
       <!-- ======================= HEADER ====================== -->
       <div class="contianer-fluid">
         <div class="header d-flex justify-content-between align-items-center">
+          <div class="toggle-btn" onclick="toggleSideNav()">
+            <div class="toggle-bar"></div>
+            <div class="toggle-bar"></div>
+            <div class="toggle-bar"></div>
+          </div>
           <div class="site-name">
             <h3>Admin Panel</h3>
           </div>
